[tool.poetry]
name = "t2b-pe"
version = "0.1.0"
description = ""
authors = ["Bo Chen <bochen0909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "1.26.4"
matplotlib = "^3.10.0"
torch = "2.0.1"
reformer-pytorch = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
